# tse-mbo

./: .gitignore  CMakeLists.txt  README.md
docs/: assignment-original.docx  assignment-source.md  assignment-understanding.md  itayose-calculation.md  jpx-trading-methodology-2024.extracted.txt  jpx-transaction-methods.md  protocol-original.docx  protocol-source.md  protocol-summary.md  protocol-understanding.md
include/tse_flex_mbo/: app_config.hpp  market_data.hpp  order_book.hpp
include/tse_mbo/: app.hpp  flex_parser.hpp  indicative.hpp  network_decoder.hpp  order_book.hpp
libs/app/: app.cpp  app.hpp
libs/book/: indicative.cpp  indicative.hpp  order_book.cpp  order_book.hpp
libs/core/app/: app.cpp
libs/core/book/: indicative.cpp  indicative.hpp  order_book.cpp  order_book.hpp
libs/core/flex/: flex_parser.cpp  flex_parser.hpp
libs/core/ingest/: network_decoder.cpp  network_decoder.hpp  pcap_reader.cpp  pcap_reader.hpp
libs/flex/: flex_parser.cpp  flex_parser.hpp
notes/: context.md  decision-log.md  implementation-plan.md  open-questions.md  protocol-notes.md  step3_iap_iav_calculation.cpp  step3_iep_iev_calculation.cpp
output/: README.md  iap_iav_20241105.csv
output/audit/: step1_fixture_report.txt
src/: app.cpp  flex_parser.cpp  indicative.cpp  main.cpp  network_decoder.cpp  order_book.cpp  pcap_reader.cpp
src/app/: app.cpp  app.hpp
src/book/: indicative.cpp  indicative.hpp  order_book.cpp  order_book.hpp
src/cli/: main.cpp
src/flex/: flex_message.cpp  flex_message.hpp  flex_parser.cpp  flex_parser.hpp
src/ingest/: network_decoder.cpp  network_decoder.hpp  pcap_reader.cpp  pcap_reader.hpp
src/replay/: replay_runner.cpp  replay_runner.hpp
src/tse/: tse.cpp  tse.hpp
tests/: fixture_capture_test.cpp  test_main.cpp
tests/audit/: compare_step1_step2_order_book.py  iap_iav_audit.hpp  iep_iev_audit.hpp  trace_symbol_order_book.py
